[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ashby-connector"
version = "0.1.0"
description = "Model Context Protocol (MCP) server implementation for Ashby ATS integration"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "ashby", "ats"]
dependencies = [
    "mcp",
    "requests",
    "python-dotenv",
]
license = { text = "MIT" }
authors = [
    { name = "Nicolas Thouzeau", email = "nicolas.thouzeau@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/thz/MCP-Ashby"

[project.scripts]
ashby = "src.ashby:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
